# godot-bridge-cli

./: README.md  pyproject.toml
src/godot_bridge/: __init__.py  client.py  main.py
